<resources>
    <string name="label_all_user">Todos los usuarios</string>
    <string name="label_login">Iniciar sesión - DietNow</string>
    <string name="label_register">Crear cuenta - DietNow</string>
    <string name="label_main_page">Menú prinicpal</string>
    <string name="label_admin_profile">Admin Profile</string>
    <string name="label_admin_register">Admin Register</string>
    <string name="label_user_profile">User Profile</string>
    <string name="label_user_edit_profile">Editar perfil</string>
    <string name="label_user_view_profile">Mi perfil</string>
    <string name="label_MyDiets">Mis Dietas</string>
    <string name="label_camera_scan_product">Escanear producto</string>
    <string name="label_create_diet">Dieta</string>
    <string name="label_add_food">Añadir alimento</string>
    <string name="app_name">Diet Now</string>
    <string name="email">Email</string>
    <string name="emailAllUser">Email...</string>
    <string name="email_label">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="password_repear">Repetir contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="username">Nombre de usuario</string>
    <string name="name">Nombre</string>
    <string name="description">Descripción</string>
    <string name="lastname">Apellido(s)</string>
    <string name="age">Edad</string>
    <string name="save">Guardar</string>
    <string name="genre">Género</string>
    <string name="genre_male">Masculino</string>
    <string name="genre_female">Femenino</string>
    <string name="genre_man">Hombre</string>
    <string name="genre_woman">Mujer</string>
    <string name="genre_no_response">Prefiero no responder</string>
    <string name="register_check_fields">¡Hay algún campo que está vacio!</string>
    <string name="register_check_paaswords">¡Las contraseñas no coinciden!</string>
    <string name="settings">Settings</string>
    <string name="welcome">Bienvenido/a</string>
    <string name="login_failed">Credenciales incorrectos</string>
    <string name="register_succesful">Cuenta creada correctamente</string>
    <string name="register_failed">Error al crear cuenta</string>
    <string name="password_tooltip">6 caracteres como mínimo</string>
    <string name="years">años</string>
    <string name="create_account">Crear cuenta</string>
    <string name="change">Cambiar</string>
    <string name="select_image">Selecciona una imagen</string>
    <string name="select_image_error">Error al seleccionar una imagen</string>
    <string name="select_doc_error">Error al seleccionar un documento</string>
    <string name="my_stats">Mis estadísticas</string>
    <string name="uploading">Subiendo</string>
    <string name="uploaded_progress">subido</string>
    <string name="uploaded_final">Imagen actualizada con éxito</string>
    <string name="uploaded_final_doc">Documento subido con éxito</string>
    <string name="all_users">Todos los usuarios</string>
    <string name="created_at">Fecha de creación</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="password_tip">* La contrasña debe tener al menos 6 caracteres</string>
    <string name="new_password_tip">* La nueva contraseña reemplazará a la anterior</string>
    <string name="delete_alert_title"> AVISO </string>
    <string name="delete_alert_msg"> ¿Esta seguro de querer eliminar a este usuario? </string>
    <string name="delete_alert_yes_opt"> Confirmar </string>
    <string name="delete_alert_no_opt"> Volver </string>
    <string name="creation_date">Fecha de creación</string>
    <string name="rating">Valoración</string>
    <string name="statistics">Estadísticas</string>
    <string name="likes">Likes</string>
    <string name="dislikes">Dislikes</string>
    <string name="views">Visitas</string>
    <string name="food">Alimentos</string>
    <string name="Edit_comments">Editar comentarios</string>
    <string name="delete">Eliminar</string>
    <string name="remove">Borrar</string>
    <string name="view">Ver</string>
    <string name="edit">Editar</string>
    <string name="add_food">Añadir alimento</string>
    <string name="add_food_message">¿Cómo deseas añadir el alimento? Escoge una de las dos opciones</string>
    <string name="delete_diet">Eliminar dieta</string>
    <string name="delete_diet_message">¿Seguro que deseas eliminar esta dieta? Esta acción es irreversible y luego no se podrá recuperar</string>
    <string name="actions">Acciones</string>
    <string name="create_diet">Crear dieta</string>
    <string name="create_diet_error">Error al crear dieta</string>
    <string name="create_diet_success">Dieta creada correctamente</string>
    <string name="add_manual_food">Añadir producto por código de barras de forma manual</string>
    <string name="add">Añadir</string>
    <string name="food_details">Información nutricional</string>
    <string name="profile_settings">Ajustes de perfil</string>
    <string name="profile_add">Seleccione una opcion</string>
    <string name="local_separator">,</string>
    <string name="measure_Weight">kg</string>
    <string name="add_steps">Añadir Pasos</string>
    <string name="add_Weight">Añadir Peso</string>
    <string name="publish">Publicar</string>
    <string name="published_diet">Publicada</string>
    <string name="unpublish">Despublicar</string>
    <string name="unpublished_diet">Despublicada</string>
    <string name="status">Estado:</string>
    <string name="steps">Pasos</string>
    <string name="weight">Pesos</string>
    <string name="publiseh_by">Publicada por:</string>
    <string name="upload_document">Subir documento</string>
    <string name="documents">Documentos</string>
    <string name="alertFollowDiet">Ya esta siguiendo una dieta, si sigues esta dieta dejaras de seguir la actual, ¿quieres continuar?</string>
    <string name="alertFollowingDiet">Ya esta siguiendo esta dieta</string>
    <string name="alertSaveAliment">Selecciona los alimentos que quieres guardar</string>
    <string name="createdAccount">Miembro desde</string>
    <string name="comment_diet">Comentar</string>
    <string name="current_diet_history">Gráfico dieta actual</string>
    <string name="graphic_diet_text_title">Gráfico dieta actual</string>
    <string name="add_manual_food_byText">Añadir producto manualmente</string>
    <string name="nameAdd">Nombre</string>
    <string name="kcalAdd">Kcal por cada 100g</string>
    <string name="gAdd">Gramos</string>
    <string-array name="yes_no">
        <item>Si</item>
        <item>No</item>
    </string-array>
    <string-array name="genres">
        <item>- Selecciona género -</item>
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Prefiero no especificar</item>
    </string-array>
    <string-array name="roles">
        <item>- Selecciona rol -</item>
        <item>Admin</item>
        <item>User</item>
    </string-array>
    <string-array name="add_food_options">
        <item>Desde la cámara</item>
        <item>Manualmente</item>
    </string-array>
    <string-array name="profile_settings_options">
        <item>Historico de dietas</item>
        <item>Cerrar sesión</item>
        <item>Editar perfil</item>
        <item>Borrar perfil</item>
    </string-array>
    <string-array name="profile_settings_add">
        <item>Añadir Pasos</item>
        <item>Añadir Peso</item>
    </string-array>
    <string name="my_profile">Mi perfil</string>
    <string name="published_diets">Dietas publicadas</string>
    <string name="my_diets_created">Mis dietas creadas</string>
    <string name="create_user">Crear usuario</string>
    <string name="unsubscribe">Dejar de seguir</string>
    <string name="dislike">No me gusta</string>
    <string name="like">Me gusta</string>
    <string name="week_char_m">l</string>
    <string name="week_char_t">m</string>
    <string name="week_char_w">x</string>
    <string name="week_char_th">j</string>
    <string name="week_char_f">v</string>
    <string name="week_char_sat">s</string>
    <string name="week_char_sun">d</string>
    <string name="followed_diet">Dieta seguida</string>
    <string name="view_diet">Ver dieta</string>
    <string name="dietComments">Comentarios de la dieta</string>
    <string name="comment">Comentar</string>
    <string name="emptyComment">El comentario está vacío</string>
    <string name="created_comment_diet_successfully">Comentario de dieta creado correctamente</string>
    <string name="delete_comment">Borrar comentario</string>
    <string name="confirm_delete_comment">¿Seguro que desea eliminar este comentario?</string>
    <string name="add_comment_hint">Escribe aquí tu comentario</string>
    <string name="item_menu_history">Histórico de dietas</string>
    <string name="item_menu_logout">Cerrar sesión</string>
    <string name="item_menu_edit_profile">Editar perfil</string>
    <string name="item_menu_delete_profile">Eliminar cuenta</string>
    <string name="add_steps_label">Inserta el número de pasos realizados en el día</string>
    <string name="add_weight_label">Añadir peso para el día</string>
    <string name="add_weight">Añadir peso</string>
    <string name="profile_updated_sucesfully">Perfil actualizado correctamente</string>
    <string name="editComment">Actualizar</string>
    <string name="comment_updated_succesfully">Comentario actualizado correctamente</string>
    <string name="comments">Comentarios</string>
    <string name="login_failed_inactive">Usuario eliminado</string>
    <string name="active">Activo</string>
    <string name="unpublished_success">Dieta despublicada</string>
    <string name="published_success">Dieta publicada</string>
    <string name="aliment_data_saved">Datos del alimentos actualizados</string>
    <string name="register_exists">Este email ya ha sido registrado</string>
    <string name="register_exists_failed">Este email ha sido dado de baja contacta con un administrador</string>
    <string name="publish_no_aliments">La dieta debe tener al menos 1 alimento para ser publicada</string>
    <string name="other_actions">Otras acciones</string>
    <string name="diets_actions">Acciones sobre dietas</string>
    <string name="users_actions">Acciones sobre usuarios</string>
    <string name="admin_all_diets">Todas las dietas del sistema</string>
    <string name="create_diet_empty_values">Debes de introducir el título y la descripción de la dieta</string>
    <string name="aliements_updated_succesfully">Consumo de alimentos actualizado correctamente</string>
    <string name="unsubscribe_diet">Ya no sigues ninguna dieta</string>
    <string name="diet_like">Le has dado like a la dieta</string>
    <string name="diet_dislike">Le has dado dislike a la dieta</string>
    <string name="diet_information">Información de la dieta</string>
    <string name="removed_final_doc">Archivo eliminado</string>
    <string name="change_profile_img">Cambiar imagen</string>
    <string name="admin_sys_info">Información del sistema</string>
    <string name="admin_account_info">Información personal</string>
    <string name="admin_sys_users">Número de usuario que administras</string>
    <string name="admin_sys_diets">Número de dietas que administras</string>
    <string name="chart_my_steps">Mis pasos</string>
    <string name="day">Dia</string>
    <string name="progress">Progreso</string>
    <string name="chart_my_weights">Mis pesos</string>
    <string name="weights">Pesos</string>
    <string name="current_diet_graphic">Gráfico dieta actual</string>
    <string name="my_graphic">Mi gráfica</string>
    <string name="bb_home">Menú</string>
    <string name="bb_profile">Perfil</string>
    <string name="bb_published">Dietas</string>
    <string name="bb_created">Creadas</string>
    <string name="kcal_consumed">cantidad consumida</string>
    <string name="foreach_100g">Por cada 100g de</string>
</resources>