<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bb_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/bb_home"/>
    <item
        android:id="@+id/bb_profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/bb_profile"/>
    <item
        android:id="@+id/bb_published"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_public_24"
        android:title="@string/bb_published"/>
    <item
        android:id="@+id/bb_created"
        android:enabled="true"
        android:icon="@drawable/ic_edit"
        android:title="@string/bb_created"/>
</menu>